--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "prepare": "patch-package",
     "webpack": "cross-env NODE_ENV=production webpack",
     "webpack-server": "webpack-dev-server --content-base src --hot --inline",
     "test": "jest --silent",
@@ -43,11 +44,13 @@
     "radium": "^0.24.1",
     "radium-normalize": "^2.0.5",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-icons": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -59,10 +62,16 @@
     "concurrently": "^3.6.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.2.0",
+    "eslint-config-cat": "^0.2.2",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-watch": "^4.0.2",
     "jest": "^23.4.2",
+    "patch-package": "^5.1.1",
     "pre-commit": "^1.2.2",
     "react-test-renderer": "^16.4.1",
-    "webpack": "^4.16.3",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
